Fixed a Bug with the Section Grid in Internet Explorer on Small Screens

--- a/_scss/components/section-grid.scss
+++ b/_scss/components/section-grid.scss
@@ -1,33 +1,12 @@
 @charset "utf-8";
 
-.section-grid {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-
-    .description {
+@media only screen and (min-width: $screen-width-l) {
+    .section-grid {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex;
 
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-        flex-direction: column;
-    }
-}
-
-@media only screen and (min-width: $screen-width-l) {
-    .section-grid {
         -webkit-box-align: center;
         -webkit-align-items: center;
         -ms-flex-align: center;
@@ -38,6 +17,19 @@
         .description {
             margin: 0;
             width: 50%;
+        }
+
+        .description {
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -ms-flexbox;
+            display: flex;
+
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+            -webkit-flex-direction: column;
+            -ms-flex-direction: column;
+            flex-direction: column;
         }
     }
 
